--- a/css/colorGame.css
+++ b/css/colorGame.css
@@ -24,6 +24,12 @@ html {
   flex-flow: row wrap;
   justify-content: space-around; }
 
+.m-t {
+  margin-top: 40px; }
+
+.m-b {
+  margin-bottom: 40px; }
+
 .nav-flex {
   display: flex;
   justify-content: space-around; }
@@ -59,3 +65,9 @@ html {
   margin-top: 20px;
   width: 200px;
   height: 200px; }
+
+h3 {
+  font-size: 3rem; }
+
+h4 {
+  font-size: 1.5rem; }
