--- a/sass/colorGame.scss
+++ b/sass/colorGame.scss
@@ -5,28 +5,14 @@
     padding: 0;
 }
 
-html {
-    width: 100%;
+.container {
+    max-width: 600px;
+    margin: 0 auto;
+    overflow: auto;
 }
 
-.container {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.container {
+.text-center {
     text-align: center;
-    padding-top: 150px;
-    padding-bottom: 150px;
-}
-
-.flex-container {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
 }
 
 .m-t {
@@ -58,6 +44,10 @@ html {
     background: black;
 }
 
+.bg-whitish{
+    background: #f5f5f5;
+}
+
 .font-white {
     color: #ffffff;
 }
@@ -80,13 +70,19 @@ html {
 
 .square {
     border-radius: 10px;
-    margin-top: 20px;
-    width: 200px;
-    height: 200px;
+    margin: 1.66%;
+    width: 30%;
+    padding-bottom: 30%;
+    float: left;
+}
+
+h1 {
+    font-size: 3rem;
 }
 
 h3 {
     font-size: 3rem;
+    font-weight: 300;
 }
 
 h4 {
