--- a/css/colorGame.css
+++ b/css/colorGame.css
@@ -66,4 +66,19 @@ h3 {
   font-weight: 300; }
 
 h4 {
-  font-size: 1.5rem; }
+  color: black;
+  align-self: center; }
+
+#randomRGB {
+  display: block; }
+
+button {
+  height: auto;
+  width: 70px; }
+  button:hover {
+    background: rgba(0, 0, 220, 0.5);
+    border: rgba(0, 0, 220, 0.5); }
+
+.stripe {
+  height: 40px;
+  display: flex; }
