--- a/sass/colorGame.scss
+++ b/sass/colorGame.scss
@@ -86,6 +86,24 @@ h3 {
 }
 
 h4 {
-    font-size: 1.5rem;
+    color: black;
+    align-self: center;
 }
 
+#randomRGB {
+    display: block;
+}
+
+button {
+    height: auto;
+    width: 70px;
+    &:hover{
+        background: rgba(0, 0, 220, 0.5);
+        border: rgba(0, 0, 220, 0.5);
+    }
+}
+
+.stripe {
+    height: 40px;
+    display: flex;
+}
