--- a/sass/colorGame.scss
+++ b/sass/colorGame.scss
@@ -32,9 +32,7 @@
     cursor: pointer;
 }
 
-#easy:focus, #easy:active, #hard:focus, #hard:active {
-    background: blue;
-}
+
 
 .bg-blue {
     background: #3C76AE;
@@ -97,9 +95,12 @@ h4 {
 button {
     height: auto;
     width: 70px;
+    font-weight: 600;
+    transition: all 0.3s;
     &:hover{
         background: blue;
         border-color: blue;
+        color: white;
     }
 }
 
