--- a/sass/colorGame.scss
+++ b/sass/colorGame.scss
@@ -33,7 +33,6 @@
 }
 
 
-
 .bg-blue {
     background: #3C76AE;
 }
@@ -95,6 +94,7 @@ h4 {
 button {
     height: auto;
     width: 70px;
+    color: blue;
     font-weight: 600;
     transition: all 0.3s;
     &:hover{
@@ -112,4 +112,5 @@ button {
 .selected {
     background: blue;
     border-color: blue;
+    color: white;
 }
